force-app/main/default/objects/FEC_B2_Contract__c/FEC_B2_Contract__c.object-meta.xml
<CustomObject>
    <label>B2 Contract</label>
    <nameField>
        <label>B2 Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2 Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>