force-app/main/default/objects/FEC_B2_Contract__c/fields/FEC_City__c.field-meta.xml
<CustomField>
    <fullName>FEC_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>