force-app/main/default/objects/FEC_B2_Contract__c/fields/FEC_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Code__c</fullName>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>