force-app/main/default/objects/FEC_B2_Contract__c/fields/FEC_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Full_Name__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>