force-app/main/default/objects/FEC_B2_Contract__c/fields/FEC_ID_Card__c.field-meta.xml
<CustomField>
    <fullName>FEC_ID_Card__c</fullName>
    <label>ID Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>