force-app/main/default/objects/FEC_B2_Contract__c/fields/FEC_Installment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Installment__c</fullName>
    <label>Installment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>