force-app/main/default/objects/FEC_B2_Contract__c/fields/FEC_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>FEC_Monthly_Fee__c</fullName>
    <label>Monthly Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>