force-app/main/default/objects/FEC_B2_Contract__c/fields/FEC_Principal__c.field-meta.xml
<CustomField>
    <fullName>FEC_Principal__c</fullName>
    <label>Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>