force-app/main/default/objects/FEC_B2_Contract__c/fields/FEC_Region__c.field-meta.xml
<CustomField>
    <fullName>FEC_Region__c</fullName>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>