force-app/main/default/objects/FEC_B2_Contract__c/fields/FEC_Sign__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sign__c</fullName>
    <label>Sign</label>
    <type>Date</type>
</CustomField>