force-app/main/default/objects/FEC_B2_Contract__c/fields/FEC_Term__c.field-meta.xml
<CustomField>
    <fullName>FEC_Term__c</fullName>
    <label>Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>