force-app/main/default/objects/FEC_B2_Contract__c/fields/FEC_Vung__c.field-meta.xml
<CustomField>
    <fullName>FEC_Vung__c</fullName>
    <label>Vùng</label>
    <length>255</length>
    <type>Text</type>
</CustomField>